--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,9 @@
 .completed span {
   text-decoration: line-through;
 }
+.App {
+  display: flex;
+  flex-flow: column nowrap;
+  align-items: center;
+  padding: 2em;
+}
