--- a/src/Items/Items.css
+++ b/src/Items/Items.css
@@ -4,6 +4,7 @@
   margin-top: 1em;
   box-shadow: 0, 0, 5px rgba(0, 0, 0, 0.3);
   border-radius: 1em;
+  overflow: hidden;
   width: 100%;
   max-width: 400px;
 }
